[metadata]
name = email-manager
version = 1.0
description = Simple Django component for general-purpose email management.
long_description = file: README.md
url = https://github.com/huenique/email-manager
author = Hju Kneyck M. Flores
author_email = hjucode@gmail.com
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django :: 3.1
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Topic :: Communications :: Email
    

[options]
include_package_data = true
packages = find:
python_requires = >=3.8.7
install_requires = 
    django >= 3.1.7
    django-rest-knox==4.1.0
    djangorestframework==3.12.2